# QtWinForms

./: .gitignore  AGENTS.md  BUILDING.md  CMakeLists.txt  QtWinForms.sln  QtWinForms.slnx  README.md  build.ps1  test_qt.cpp
src/AllControlsSample/: AllControlsSample-QtWinForms.csproj  AllControlsSample-WinForms.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
src/QtBackend/: CMakeLists.txt  lib.cpp
src/System.Drawing/: System.Drawing.csproj  TypeForwards.cs
src/System.Drawing.Common/: AssemblyInfo.cs  Bitmap.cs  Brush.cs  Brushes.cs  ContentAlignment.cs  Font.cs  FontFamily.cs  FontStyle.cs  Graphics.cs  GraphicsUnit.cs  Helpers.cs  Icon.cs  IconConverter.cs  Image.cs  ImageAttributes.cs  ImageConverter.cs  ImageFormat.cs  NativeMethods.cs  Pen.cs  Pens.cs  PixelFormat.cs  SolidBrush.cs  StringFormat.cs  System.Drawing.Common.csproj  SystemFonts.cs
src/System.Windows.Forms/: AnchorStyles.cs  Application.cs  ApplicationConfiguration.cs  AutoCompleteMode.cs  AutoCompleteSource.cs  AutoScaleMode.cs  BorderStyle.cs  Button.cs  ButtonBase.cs  CheckBox.cs  CheckState.cs  Clipboard.cs  CloseReason.cs  ColorDepth.cs  ColorDialog.cs  ColumnHeader.cs  ColumnStyle.cs  ComboBox.cs  ComboBoxStyle.cs  CommonDialog.cs  ContainerControl.cs  ContextMenuStrip.cs  Control.cs  ControlCollection.cs  ControlStyles.cs  ConvertEventArgs.cs  Cursor.cs  Cursors.cs  DataFormats.cs  DataGridView.cs  DataGridViewBand.cs  DataGridViewCell.cs  DataGridViewCellCollection.cs  DataGridViewCellEventArgs.cs  DataGridViewCellEventHandler.cs  DataGridViewCellFormattingEventArgs.cs  (+126 more)
(+9 files in other folders)
